Added ability to save form

--- a/src/app/form-props/form-props.template.html
+++ b/src/app/form-props/form-props.template.html
@@ -1,77 +1,115 @@
-<div class="field">
-    <label class="label">Name</label>
-    <div class="control">
-        <input class="input" type="text" placeholder="Text input">
+<div *ngIf="form">
+    <div class="field">
+        <label class="label">Form title</label>
+        <div class="control has-icons-right">
+            <input [ngClass]="{'input': !0, 'is-danger': isFieldRequired(formTitle)}"
+                   required=""
+                   #formTitle="ngModel"
+                   [(ngModel)]="form.title">
+            <span class="icon is-small is-right" *ngIf="isFieldRequired(formTitle)">
+                <i class="fa fa-warning"></i>
+            </span>
+        </div>
+        <p class="help is-danger" *ngIf="isFieldRequired(formTitle)">Form title is required</p>
     </div>
-</div>
-<div class="field">
-    <label class="label">Username</label>
-    <div class="control has-icons-left has-icons-right">
-        <input class="input is-success" type="text" placeholder="Text input" value="bulma">
-        <span class="icon is-small is-left">
-<i class="fa fa-user"></i>
-</span>
-        <span class="icon is-small is-right">
-<i class="fa fa-check"></i>
-</span>
-    </div>
-    <p class="help is-success">This username is available</p>
-</div>
-<div class="field">
-    <label class="label">Email</label>
-    <div class="control has-icons-left has-icons-right">
-        <input class="input is-danger" type="text" placeholder="Email input" value="hello@">
-        <span class="icon is-small is-left">
-<i class="fa fa-envelope"></i>
-</span>
-        <span class="icon is-small is-right">
-<i class="fa fa-warning"></i>
-</span>
-    </div>
-    <p class="help is-danger">This email is invalid</p>
-</div>
-<div class="field">
-    <label class="label">Subject</label>
-    <div class="control">
-        <div class="select">
-            <select>
-                <option>Select dropdown</option>
-                <option>With options</option>
-            </select>
+    <div class="field">
+        <label class="label">Form subtitle</label>
+        <div class="control has-icons-right">
+            <input [ngClass]="{'input': !0}"
+                   [(ngModel)]="form.subtitle">
         </div>
     </div>
-</div>
-<div class="field">
-    <label class="label">Message</label>
-    <div class="control">
-        <textarea class="textarea" placeholder="Textarea"></textarea>
+    <div class="field">
+        <label class="label">Data source</label>
+        <div class="control">
+            <div class="select">
+                <select [(ngModel)]="form.dataSource.type">
+                    <option [ngValue]="0">Server-side method</option>
+                    <option [ngValue]="1">Client-side method</option>
+                </select>
+            </div>
+        </div>
     </div>
-</div>
-<div class="field">
-    <div class="control">
-        <label class="checkbox">
-            <input type="checkbox">
-            I agree to the <a href="#">terms and conditions</a>
-        </label>
+    <div class="field" *ngIf="form.dataSource.type != null">
+        <label class="label is-small">Method name</label>
+        <div class="control has-icons-right">
+            <input [ngClass]="['input', 'is-small']"
+                   required
+                   [(ngModel)]="form.dataSource.method">
+        </div>
     </div>
-</div>
-<div class="field">
-    <div class="control">
-        <label class="radio">
-            <input type="radio" name="question">
-            Yes
-        </label>
-        <label class="radio">
-            <input type="radio" name="question">
-            No
-        </label>
+    <div class="field" *ngIf="form.dataSource.type != null">
+        <label class="label is-small">Arguments</label>
+        <div class="control has-icons-right">
+            <input [ngClass]="['input', 'is-small']"
+                   placeholder="{foo: 'bar'}"
+                   [(ngModel)]="form.dataSource.arguments">
+        </div>
     </div>
-</div>
-<div class="field is-grouped">
-    <div class="control">
-        <button class="button is-primary">Submit</button>
+    <div class="field">
+        <div class="control">
+            <label class="checkbox">
+                <input [(ngModel)]="form.useCache"
+                       type="checkbox">
+                Use cache
+            </label>
+        </div>
     </div>
-    <div class="control">
-        <button class="button is-link">Cancel</button>
+    <div class="field">
+        <label class="label">Entity type</label>
+        <div class="control">
+            <div class="select">
+                <select [(ngModel)]="form.objectType">
+                    <option [ngValue]="'0'">Policy</option>
+                    <option [ngValue]="'1'">Task</option>
+                    <option [ngValue]="'2'">Local task</option>
+                    <option [ngValue]="'3'">Settings</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="field">
+        <div class="control">
+            <label class="checkbox">
+                <input [(ngModel)]="form.$$runFunction"
+                        type="checkbox">
+                Run initialization function
+            </label>
+        </div>
+    </div>
+    <div class="field" *ngIf="form.$$runFunction">
+        <label class="label is-small">Function name</label>
+        <div class="control has-icons-right">
+            <input [ngClass]="['input', 'is-small']"
+                   [(ngModel)]="form.onInit">
+        </div>
+    </div>
+    <div class="field">
+        <label class="label">Section</label>
+        <div class="control">
+            <div class="select">
+                <select [(ngModel)]="form.section">
+                    <option [ngValue]="0">Settings</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="field is-grouped">
+        <div class="control is-expanded">
+            <button class="button is-outlined" (click)="deleteForm()">
+                <span>Delete</span>
+                <span class="icon is-small">
+                    <i class="fa fa-times"></i>
+                </span>
+            </button>
+        </div>
+        <div class="control ">
+            <button class="button is-primary" (click)="saveForm()">
+                <span class="icon is-small">
+                      <i class="fa fa-check"></i>
+                </span>
+                <span>Save</span>
+            </button>
+        </div>
     </div>
 </div>
