--- a/src/app/forms-list/forms-list.template.html
+++ b/src/app/forms-list/forms-list.template.html
@@ -1,6 +1,6 @@
 <main class="container is-fullhd">
     <div class="columns is-mobile is-gapless">
-        <div class="column is-clipped is-two-thirds">
+        <div class="column is-clipped is-two-thirds" (click)="forms.selectedFormId = null">
             <div class="panel">
                 <p class="panel-heading">
                     <span>Forms</span>
