--- a/src/app/form-props/form-props.template.html
+++ b/src/app/form-props/form-props.template.html
@@ -2,7 +2,7 @@
     <div class="field">
         <label class="label is-small">Form title</label>
         <div class="control has-icons-right">
-            <input [ngClass]="{'input': !0, 'is-danger': isFieldRequired(formTitle), 'is-small': !0}"
+            <input [ngClass]="{'input is-small': !0, 'is-danger': isFieldRequired(formTitle)}"
                    required=""
                    #formTitle="ngModel"
                    [(ngModel)]="form.title">
@@ -33,81 +33,6 @@
             </div>
         </div>
     </div>
-    <!--<div class="field">-->
-        <!--<label class="label">Data source</label>-->
-        <!--<div class="control">-->
-            <!--<div class="select">-->
-                <!--<select [(ngModel)]="form.dataSource.type">-->
-                    <!--<option [ngValue]="0">Server-side method</option>-->
-                    <!--<option [ngValue]="1">Client-side method</option>-->
-                <!--</select>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field" *ngIf="form.dataSource.type != null">-->
-        <!--<label class="label is-small">Method name</label>-->
-        <!--<div class="control has-icons-right">-->
-            <!--<input [ngClass]="['input', 'is-small']"-->
-                   <!--required-->
-                   <!--[(ngModel)]="form.dataSource.method">-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field" *ngIf="form.dataSource.type != null">-->
-        <!--<label class="label is-small">Arguments</label>-->
-        <!--<div class="control has-icons-right">-->
-            <!--<input [ngClass]="['input', 'is-small']"-->
-                   <!--placeholder="{foo: 'bar'}"-->
-                   <!--[(ngModel)]="form.dataSource.arguments">-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field">-->
-        <!--<div class="control">-->
-            <!--<label class="checkbox">-->
-                <!--<input [(ngModel)]="form.useCache"-->
-                       <!--type="checkbox">-->
-                <!--Use cache-->
-            <!--</label>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field">-->
-        <!--<label class="label">Entity type</label>-->
-        <!--<div class="control">-->
-            <!--<div class="select">-->
-                <!--<select [(ngModel)]="form.objectType">-->
-                    <!--<option [ngValue]="'0'">Policy</option>-->
-                    <!--<option [ngValue]="'1'">Task</option>-->
-                    <!--<option [ngValue]="'2'">Local task</option>-->
-                    <!--<option [ngValue]="'3'">Settings</option>-->
-                <!--</select>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field">-->
-        <!--<div class="control">-->
-            <!--<label class="checkbox">-->
-                <!--<input [(ngModel)]="form.$$runFunction"-->
-                        <!--type="checkbox">-->
-                <!--Run initialization function-->
-            <!--</label>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field" *ngIf="form.$$runFunction">-->
-        <!--<label class="label is-small">Function name</label>-->
-        <!--<div class="control has-icons-right">-->
-            <!--<input [ngClass]="['input', 'is-small']"-->
-                   <!--[(ngModel)]="form.onInit">-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="field">-->
-        <!--<label class="label">Section</label>-->
-        <!--<div class="control">-->
-            <!--<div class="select">-->
-                <!--<select [(ngModel)]="form.section">-->
-                    <!--<option [ngValue]="0">Settings</option>-->
-                <!--</select>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
     <div class="field is-grouped">
         <div class="control is-expanded">
             <button class="button is-outlined" (click)="deleteForm()">
@@ -118,7 +43,7 @@
             </button>
         </div>
         <div class="control ">
-            <button class="button is-primary" (click)="saveForm()">
+            <button [ngClass]="{'button is-primary': !0, 'is-loading': isLoading}" (click)="saveForm()">
                 <span class="icon is-small">
                       <i class="fa fa-check"></i>
                 </span>
