--- a/src/app/forms-list/form-list-branch/form-list-branch.template.html
+++ b/src/app/forms-list/form-list-branch/form-list-branch.template.html
@@ -1,4 +1,4 @@
-<a (click)="form.select($event)" [ngClass]="{'is-active':form.isSelected()}">{{form.title}}</a>
+<a (click)="form.select($event)" (dblclick)="navigateToFormDesign()" [ngClass]="{'is-active':form.isSelected()}">{{form.title}}</a>
 <ul *ngIf="form.hasChildren()">
     <li [formsListBranch]="child" *ngFor="let child of form.children"></li>
 </ul>
