--- a/src/app/+form/form.component.html
+++ b/src/app/+form/form.component.html
@@ -6,10 +6,11 @@
         <div class="column is-clipped">
             <div class="elements-droparea is-overlay"
                  appDroparea
+                 (drop)="addElement($event)"
             >
-                <div class="elements-stack">
-                    <div class="ui-element" *ngFor="let element of elements; let i = index">
-                        kygk
+                <div class="elements-stack" *ngIf="form">
+                    <div class="ui-element" *ngFor="let el of form.elements; let i = index">
+                        {{el}}
                     </div>
                 </div>
             </div>
